fix: remove sticky nav on mobile, and adjust HamburgerMenuNav pop out's sizing
remove: clean up console logs used for development

--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@
 @media (max-width: 600px) {
   #root {
     height: 100vh;
-    height: 100svh;
+    height: 100dvh;
   }
 }
 
