--- a/src/styles/HamburgerMenuNav.css
+++ b/src/styles/HamburgerMenuNav.css
@@ -10,13 +10,13 @@
   }
 
   .popout-background {
-    height: 100vh;
+    height: 100dvh;
     left: 0;
     top: 0;
     position: absolute;
     background-color: rgba(46, 46, 46, 0.568);
     width: 100%;
-    z-index: 100;
+    z-index: 200;
   }
 
   .mobile-nav-popout {
@@ -26,7 +26,7 @@
     top: 0;
     height: 100dvh;
     width: 90vw;
-    z-index: 3;
+    z-index: 999;
     padding: 0rem 0rem;
     overflow-y: scroll;
   }
