--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -304,6 +304,8 @@
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     justify-items: center;
+    z-index: 100;
+    position: inherit;
   }
 
   .search-bar__container {
